--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#FFFFFF",
-  "theme_color": "#E10600",
+  "theme_color": "#FF0000",
   "orientation": "portrait-primary",
   "icons": [
     {
